fixed few spacing and allignment issues

--- a/style1.css
+++ b/style1.css
@@ -102,6 +102,7 @@ h1 {
 
 #services {
   /* min-height: 100%; */
+  position: relative;
 }
 
 .services-card{
@@ -120,6 +121,7 @@ h1 {
 #clients {
   /* max-height: 100%; */
   background-color: #e5e5e5;
+  padding-bottom: 1rem;
 }
 
 .clients-grid {
@@ -251,7 +253,8 @@ h1 {
 }
 
 .overlay {
-  border-image: fill 1 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  border-image: fill 1 linear-gradient(rgba(0, 0, 0, 0.162), rgba(0, 0, 0, 0.004));
+
 }
 
 .text-underline {
@@ -317,12 +320,12 @@ h1 {
 
 .gallery-row {
   margin: 0px -0px;
-}
+  }
 
 /* Add padding BETWEEN each column (if you want) */
 .gallery-row,
 .gallery-row > .gallery-column {
-  padding: 0px;
+  padding: 8px;
 }
 
 /* Create three equal columns that floats next to each other */
@@ -361,5 +364,5 @@ h1 {
 /* Add a dark background color to the active button */
 .btn.active {
   background-color: #666;
-   color: white;
+  color: white;
 }
